CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(src "")
SET(luasrc 
	   ${CMAKE_CURRENT_SOURCE_DIR}/init.lua 
	   ${CMAKE_CURRENT_SOURCE_DIR}/graph.lua
	   ${CMAKE_CURRENT_SOURCE_DIR}/env.lua
	   ${CMAKE_CURRENT_SOURCE_DIR}/utils.lua
	   ${CMAKE_CURRENT_SOURCE_DIR}/doc.lua
	   ${CMAKE_CURRENT_SOURCE_DIR}/dump.lua
	   ${CMAKE_CURRENT_SOURCE_DIR}/usage.lua
)

INSTALL(FILES ${luasrc} DESTINATION ${LUADIR}/argcheck)

